src/objects/Change_Control__c.object
<CustomObject>
    <fields>
        <fullName>Application_Effected__c</fullName>
        <label>Application Effected</label>
        <picklist>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alzheimer&apos;s Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Controls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Connect - Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Friends</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_Change_Description__c</fullName>
        <inlineHelpText>Details from Change Board</inlineHelpText>
        <label>Approved Change Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Assessment_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Who is responsible for the initial assessment of the change.</inlineHelpText>
        <label>Assessment Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_ItemsAssessment_Owner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ChangeReference__c</fullName>
        <externalId>true</externalId>
        <label>ChangeReference</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_Board_Date__c</fullName>
        <inlineHelpText>Date of Change Board</inlineHelpText>
        <label>Change Advisory Forum Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Change_Board_Outcome__c</fullName>
        <label>Change Advisory Forum Outcome</label>
        <picklist>
            <picklistValues>
                <fullName>Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Agreed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Postponed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Proposal__c</fullName>
        <inlineHelpText>Initial ideas on how change should be done.  This will expanded during the Impact Assessment for the Change.</inlineHelpText>
        <label>Change Proposal</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Change_Title__c</fullName>
        <label>Change Title</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Development_Estimate_Hrs__c</fullName>
        <label>Development Estimate (Hrs)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Development_estimate_days__c</fullName>
        <formula>Development_Estimate_Hrs__c/7</formula>
        <label>Development Estimate(Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Initial_Assessment_Completed__c</fullName>
        <inlineHelpText>Date that initial assessment was completed.</inlineHelpText>
        <label>Initial Assessment Completed</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Initial_Assessment__c</fullName>
        <inlineHelpText>Initial Analysis of change.  Will change need further analysis?  Highlight any risks and scope of change.</inlineHelpText>
        <label>Initial Assessment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lead Developer</description>
        <inlineHelpText>Who is in charge of developing this change</inlineHelpText>
        <label>Lead Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Product__c</fullName>
        <label>Primary Product</label>
        <picklist>
            <picklistValues>
                <fullName>Alzheimer&apos;s Trading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Contols (BDC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS De-duplication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dementia Friends</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Affairs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ezCloudAudit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal/Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non Salesforce Procedural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Code Anywhere</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <description>Project that the change is linked to</description>
        <inlineHelpText>Projects are larger chunks of work, and may include many changes raised individually.</inlineHelpText>
        <label>Project</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Change__c</fullName>
        <label>Reason for Change</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Released_to_Production__c</fullName>
        <inlineHelpText>Date change was applied to Production</inlineHelpText>
        <label>Released to Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Released_to_Testing__c</fullName>
        <description>Date change was applied to UAT</description>
        <inlineHelpText>Date change was applied to UAT</inlineHelpText>
        <label>Released to Testing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestorName__c</fullName>
        <label>RequestorName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requestor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requestor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Change_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Salesforce_Object__c</fullName>
        <label>Salesforce Object</label>
        <picklist>
            <picklistValues>
                <fullName>Activities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All Objects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assessments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDR Service Link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Record</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contacts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Events</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fund Allocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Funding Requirement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Block</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Income Block Period</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leads</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Log a Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Organisations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook Connector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationships</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service/Activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Contracts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Usage</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Sprint_Start_Date__c</fullName>
        <description>Date item was added to development stream of work</description>
        <inlineHelpText>Date item was added to development stream of work</inlineHelpText>
        <label>Sprint Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>Change Status</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting Initial Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Assessment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting CAF</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Be Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Development</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linked to Project</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Test_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Testing_Time_Estimate_Days__c</fullName>
        <formula>Testing_Time_Estimate_Hrs__c /7</formula>
        <label>Testing Time Estimate (Days)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Testing_Time_Estimate_Hrs__c</fullName>
        <label>Testing Time Estimate (Hrs)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Assessment__c</fullName>
        <inlineHelpText>Minor &lt;=2 days; Significant &gt;2 and &lt;=4 days;Major &gt; 4 days.</inlineHelpText>
        <label>Time Assessment</label>
        <picklist>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <inlineHelpText>How urgent is the change.</inlineHelpText>
        <label>Urgency</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Non essential / Cosmetic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Preferred</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4 - Urgent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5 - Vital / Call E-Cab</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Change Control</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Lead_Developer__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Change_Items_in_initial_assessment</fullName>
        <columns>Assessment_Owner__c</columns>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Technical Assessment</value>
        </filters>
        <label>All Change Items - technical assessment</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Changes_Awaiting_Development</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Time_Assessment__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>Primary_Product__c</columns>
        <columns>Lead_Developer__c</columns>
        <columns>Assessment_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>To Be Done,In Development,In Testing</value>
        </filters>
        <filters>
            <field>Change_Board_Outcome__c</field>
            <operation>equals</operation>
            <value>Agreed</value>
        </filters>
        <label>All Approved Awaiting Development</label>
    </listViews>
    <listViews>
        <fullName>All_Internal_Changes</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Change_Control__c.Salesforce_Internal_Change</value>
        </filters>
        <label>All Internal Changes</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_New_Change_Items_waiting_analysis</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>Assessment_Owner__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>All New Change Items - waiting analysis</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Open_Changes</fullName>
        <booleanFilter>1</booleanFilter>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Change_Board_Outcome__c</columns>
        <columns>Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Date_Requested__c</columns>
        <columns>Assessment_Owner__c</columns>
        <columns>Initial_Assessment_Completed__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Lead_Developer__c</columns>
        <columns>Released_to_Testing__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Completed,Rejected</value>
        </filters>
        <label>All Open Changes</label>
    </listViews>
    <listViews>
        <fullName>Changes_linked_to_Projects</fullName>
        <columns>NAME</columns>
        <columns>Project__c</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Linked to Project</value>
        </filters>
        <label>All Changes linked to Projects</label>
    </listViews>
    <listViews>
        <fullName>Closed_Changes</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Lead_Developer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>New,Waiting CAB,To Be Done,In Development,In Testing</value>
        </filters>
        <label>Closed Changes</label>
    </listViews>
    <listViews>
        <fullName>Waiting_CAB_meeting</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>Assessment_Owner__c</columns>
        <columns>Initial_Assessment_Completed__c</columns>
        <columns>Time_Assessment__c</columns>
        <columns>Change_Board_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Waiting CAF</value>
        </filters>
        <label>Waiting CAF meeting</label>
    </listViews>
    <listViews>
        <fullName>in_development</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Requestor__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>Change_Board_Date__c</columns>
        <columns>Change_Board_Outcome__c</columns>
        <columns>Lead_Developer__c</columns>
        <columns>Sprint_Start_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Development</value>
        </filters>
        <label>In Development</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>in_testing</fullName>
        <columns>NAME</columns>
        <columns>Change_Title__c</columns>
        <columns>Lead_Developer__c</columns>
        <columns>Application_Effected__c</columns>
        <columns>Released_to_Testing__c</columns>
        <columns>Urgency__c</columns>
        <columns>Status__c</columns>
        <columns>Requestor__c</columns>
        <columns>Change_Board_Date__c</columns>
        <columns>Change_Board_Outcome__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Testing</value>
        </filters>
        <label>In UAT</label>
        <sharedTo>
            <group>SystemAdministrators</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>Change-{00000}</displayFormat>
        <label>Change Control Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Change Items</pluralLabel>
    <recordTypes>
        <fullName>Salesforce_Application_Change</fullName>
        <active>true</active>
        <description>Change Request for Salesforce Applicaition</description>
        <label>Salesforce Application Change</label>
    </recordTypes>
    <recordTypes>
        <fullName>Salesforce_Internal_Change</fullName>
        <active>true</active>
        <description>Internal Change Request for Salesforce Applicaition</description>
        <label>Salesforce Internal Change</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>